# bartMachine_port

./: .gitignore  CMakeLists.txt  CONSTRAINTS.md  Look_here_for_text_from_terminal.txt  Look_here_for_text_from_terminal_2.txt  REVISED_TASK_SEQUENCE.md  TASK_SEQUENCE.md  TASK_SEQUENCE_OLD.md  VALIDATION_STRATEGY.md  code_review_task_breakdown.md  next_session_prompt.md  phase_2_task_8_1_plan.md  phase_2_task_8_3_plan.md  python_implementation_checklist.md  r_python_equivalence_testing.md  r_to_python_components.md  r_to_python_porting_guidelines.md  task_5_4_progress_summary.md  task_5_5_plan.md  task_5_5_progress_summary.md  task_5_5_prompt.md  task_5_6_plan.md  task_5_6_prompt.md  task_6_1_plan.md  task_6_1_prompt.md  task_7_1_plan.md  task_8_1_completion_report.md  task_8_2_completion_report.md  test_task_1_3.cpp  test_task_1_4.cpp  test_task_2_1.cpp  test_task_2_2.cpp  test_task_2_5.cpp  test_task_2_6.cpp  test_task_4_3.cpp  test_task_5_1.cpp  test_task_5_3.cpp
bartmachine_py/: .coveragerc  MANIFEST.in  README.md  compare_long_runs.py  compare_r_python_results.py  compare_very_long_runs 2.py  direct_comparison.py  direct_comparison_very_long.py  direct_var_importance_comparison.csv  implementation_summary 2.md  implementation_summary.md  investigation_project_plan.md  long_var_importance_comparison.csv  next_session_prompt 2.md  next_session_prompt.md  prediction_comparison.csv  py_bart_predictions.csv  py_bart_var_importance.csv  py_direct_var_importance 2.csv  py_direct_var_importance_very_long.csv  py_test_idx_very_long 2.csv  py_train_idx_very_long.csv  pyproject.toml  pytest.ini  python_package_checklist.md  r_bart_boston.R  r_bart_boston_long.R  r_bart_boston_very_long 2.R  r_bart_predictions 2.csv  r_bart_predictions_long 2.csv  r_bart_predictions_very_long.csv  r_bart_var_importance.csv  r_bart_var_importance_long 2.csv  r_bart_var_importance_very_long 2.csv  r_python_comparison_test.py  readme_template.md  requirements.txt  setup.cfg  setup.py  setup_py_template.md  (+3 more)
bartmachine_py/bartmachine/: __init__.py  bartMachine.py  bart_arrays.py  bart_node_related_methods.py  bart_package_builders.py  bart_package_cross_validation.py  bart_package_data_preprocessing.py  bart_package_f_tests.py  bart_package_inits.py  bart_package_plots.py  bart_package_predicts.py  bart_package_summaries.py  bart_package_variable_selection.py  data_preprocessing.py  f_tests.py  java_bridge.py  model_building.py  node_related_methods.py  plots.py  zzz.py
bartmachine_py/bartmachine/examples/: bart_machine_data_format.py  bart_machine_example.py  bart_machine_with_data.py  basic_java_test.py  basic_usage.py  boston_housing_example.py  boston_housing_sklearn.py  check_multi_thread.py  check_wrapper_class.py  complete_bart_machine_example.py  explore_bart_machine.py  inspect_bart_machine.py  java_bridge_example.py  simple_bart_machine.py  simple_bart_test.py  simple_check.py  simple_java_test.py  simple_predict_example.py  test_posterior_samples.py  test_reflection.py  variable_selection_example.py
bartmachine_py/bartmachine/java/: README.md  compile_wrapper.sh
bartmachine_py/bartmachine/java/src/bartMachine/: BartMachineWrapper.java
bartmachine_py/bartmachine/redundant_files/: bart_arrays.py  cross_validation.py  data_preprocessing.py  f_tests.py  initialization.py  java_bridge.py  model_building.py  node_related_methods.py  plots.py  summaries.py
bartmachine_py/bartmachine/tests/: __init__.py  conftest.py  test_basic_functionality.py  test_java_bridge.py  test_r_equivalence.py
bartmachine_py/docs/: api.md  examples.md  installation.md  usage.md
code_review/: README.md  comparison_methodology.md  discrepancy_template.md  framework_summary.md  issue_tracker.md  review_process.md  task_7_0_completion_report.md  task_7_1_approach.md  task_7_1_completion_report.md  task_7_1_file_locations.md
code_review/discrepancies/: DISC-001.md  DISC-002.md
old_task_7_2_files/: check_random_samples.R  compare_java_cpp.R  compare_java_cpp_actual.R  compare_java_cpp_fixed.R  compare_java_cpp_port.R  compare_java_cpp_real.R  compare_java_cpp_simple.R  compare_java_cpp_simple_fixed.R  comparison_report.md  comparison_report_port.md  comparison_results.RData  comparison_results_port.RData  initialize_random_samples.cpp  task_7_2_validation_plan.md  test_task_7_2.cpp  test_task_7_2_new.cpp  validation_report.md  validation_runner.cpp
src/cpp/: bartmachine_a_base.cpp  bartmachine_b_hyperparams.cpp  bartmachine_c_debug.cpp  bartmachine_classification.cpp  bartmachine_d_init.cpp  bartmachine_e_gibbs_base.cpp  bartmachine_f_gibbs_internal.cpp  bartmachine_g_mh.cpp  bartmachine_h_eval.cpp  bartmachine_i_prior_cov_spec.cpp  bartmachine_regression.cpp  bartmachine_tree_node.cpp  exact_port_mersenne_twister.cpp  stat_toolbox.cpp  stat_util.cpp
src/cpp/include/: bartmachine_a_base.h  bartmachine_b_hyperparams.h  bartmachine_c_debug.h  bartmachine_classification.h  bartmachine_d_init.h  bartmachine_e_gibbs_base.h  bartmachine_f_gibbs_internal.h  bartmachine_g_mh.h  bartmachine_h_eval.h  bartmachine_i_prior_cov_spec.h  bartmachine_regression.h  bartmachine_tree_node.h  classifier.h  exact_port_mersenne_twister.h  stat_toolbox.h  stat_util.h  tree_array_illustration.h
src/r/: DESCRIPTION  NAMESPACE  bartmachine_cpp_port.R  bartmachine_rcpp.R  bartmachine_rcpp_simple.R  compare_java_cpp.R  compile_rcpp.R  compile_rcpp_simple.R  compile_rcpp_with_cpp.R  test_bartmachine_rcpp.R
src/r/bartmachine_cpp_port/: bart_package_builders_cpp.R  bart_package_predicts_cpp.R
src/rcpp/: bartmachine_rcpp.cpp
tests/: test_basic_compilation.cpp  test_task_1_2.cpp  test_task_2_3.cpp  test_task_2_4.cpp  test_task_3_1.cpp  test_task_3_2.cpp  test_task_3_3.cpp  test_task_4_1.cpp  test_task_4_2.cpp  test_task_5_2.cpp  test_task_5_4.cpp  test_task_5_5.cpp  test_task_5_6.cpp  test_task_6_1.cpp  test_task_6_2.cpp  test_task_7_1.cpp
